# OpenWatt

./: .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  BACKLOG.md  Dockerfile  GITHUB-ISSUE-monitoring.md  LICENSE  PLAN-monitoring.md  README.md  ci_log.txt  docker-compose.prod.yaml  docker-compose.yaml  nightly_log.txt  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  ingest-live.yml  ingest-live.yml.disabled  nightly.yml
api/app/: main.py
db/: ddl.sql
docs/: MIGRATION-v2.md  POC-PLAYWRIGHT.md  SELF-HOSTED-SETUP.md  admin-wireframe.txt  adminConsole-refactoring-complete.md  audit.md  frontend-testing.md  ingestion-limitations.md  logging.md  monitoring-setup-guide.md  refactoring-admin-console.md  sprint-1-summary.md  sprint-2-frontend-tests-complete.md  sprint-2-summary.md
docs/parsers/: README.md  edf.md  engie.md  mint.md  totalenergies.md
docs/ui/: README.md  badges.md  types.ts
elec-tariffs-spec-kit/db/: ddl.sql
elec-tariffs-spec-kit/specs/: constitution.md  glossary.md  governance.md  plan.md  system.md  tests.md
ingest/: README.md  fetch.py  persist.py  pipeline.py  rate_limiter.py  retry.py
parsers/config/: edf.yaml  engie.yaml  mint_classic_green.yaml  mint_indexe_trv.yaml  mint_smart_green.yaml  total_heures_eco.yaml  total_standard_fixe.yaml  totalenergies.yaml
parsers/core/: config.py  parser.py  pdf_parser.py
scripts/: apply_ddl.py  bootstrap_db.py  check_sources.py  export_openapi.py  import_trve.py  run_ingest_all.py  test_playwright_poc.py
specs/: UI  api.md  constitution.md  glossary.md  governance.md  openapi.generated.json  openapi.yaml  plan.md  system.md  tests.md
specs/data-contracts/: tariff.schema.json  trve_reference.schema.json
tests/: conftest.py  test_api.py  test_api_db.py  test_check_sources.py
tests/api/: __init__.py  test_health_service.py
tests/ingest/: test_persist.py
tests/parsers/: test_pipeline.py  test_snapshots.py
ui/: .eslintrc.json  Dockerfile  README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ui/app/: globals.css  page.tsx  (+1 more)
(+49 files in other folders)
